--- a/benchmark.ipynb
+++ b/benchmark.ipynb
@@ -23,12 +23,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 129,
    "id": "8fcd2b97299a562",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-05T18:11:30.837479Z",
-     "start_time": "2025-03-05T18:11:30.832441Z"
+     "end_time": "2025-03-05T18:53:02.396345Z",
+     "start_time": "2025-03-05T18:53:02.394142Z"
     },
     "collapsed": false,
     "jupyter": {
@@ -44,12 +44,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 130,
    "id": "c3c0afb6f55e2ecc",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-05T18:11:30.853733Z",
-     "start_time": "2025-03-05T18:11:30.849807Z"
+     "end_time": "2025-03-05T18:53:02.411826Z",
+     "start_time": "2025-03-05T18:53:02.409251Z"
     },
     "collapsed": false,
     "jupyter": {
@@ -115,12 +115,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 131,
    "id": "c5b77fa961672aa1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-05T18:11:30.889650Z",
-     "start_time": "2025-03-05T18:11:30.864564Z"
+     "end_time": "2025-03-05T18:53:02.458895Z",
+     "start_time": "2025-03-05T18:53:02.429954Z"
     },
     "collapsed": false,
     "jupyter": {
@@ -159,12 +159,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 132,
    "id": "f6b97d5055f4f86f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-05T18:11:30.909800Z",
-     "start_time": "2025-03-05T18:11:30.897739Z"
+     "end_time": "2025-03-05T18:53:02.472873Z",
+     "start_time": "2025-03-05T18:53:02.464228Z"
     },
     "collapsed": false,
     "jupyter": {
@@ -216,18 +216,17 @@
     }
    },
    "source": [
-    "### Plot the data in log/log\n",
-    "\n"
+    "### Plot the data in log/log"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 133,
    "id": "3128d32d46f96b81",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-05T18:11:31.117547Z",
-     "start_time": "2025-03-05T18:11:30.941571Z"
+     "end_time": "2025-03-05T18:53:02.825684Z",
+     "start_time": "2025-03-05T18:53:02.618237Z"
     },
     "collapsed": false,
     "jupyter": {
@@ -329,12 +328,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 134,
    "id": "d233c7e6bd0ba5d2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-05T18:11:31.125736Z",
-     "start_time": "2025-03-05T18:11:31.120540Z"
+     "end_time": "2025-03-05T18:53:02.831406Z",
+     "start_time": "2025-03-05T18:53:02.826626Z"
     },
     "collapsed": false,
     "jupyter": {
@@ -373,12 +372,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 135,
    "id": "7e5b67a50333a913",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-05T18:11:31.133497Z",
-     "start_time": "2025-03-05T18:11:31.130314Z"
+     "end_time": "2025-03-05T18:53:02.837544Z",
+     "start_time": "2025-03-05T18:53:02.834654Z"
     },
     "collapsed": false,
     "jupyter": {
@@ -436,19 +435,17 @@
     }
    },
    "source": [
-    "### Plotting the data\n",
-    "\n",
-    "We will plot the data in a log-log scale to better visualize the performance of the provers."
+    "### Plot the data in log/log"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 136,
    "id": "41539b75707c96d8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-05T18:11:31.418407Z",
-     "start_time": "2025-03-05T18:11:31.269557Z"
+     "end_time": "2025-03-05T18:53:03.044063Z",
+     "start_time": "2025-03-05T18:53:02.896755Z"
     },
     "collapsed": false,
     "jupyter": {
@@ -541,7 +538,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
