update broken url

--- a/benchmark.ipynb
+++ b/benchmark.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "You can run this Python notebook yourself to create new plots or analyze the data\n",
     "\n",
-    "Raw results can be found [here](/bench_results)\n"
+    "Raw results can be found in [here](https://github.com/yetanotherco/zkvm_benchmarks/tree/main/bench_results)\n"
    ]
   },
   {
@@ -25,8 +25,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-05T19:12:12.707012Z",
-     "start_time": "2025-03-05T19:12:12.100570Z"
+     "end_time": "2025-03-05T19:17:04.659935Z",
+     "start_time": "2025-03-05T19:17:04.131436Z"
     }
    },
    "outputs": [],
@@ -43,8 +43,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-05T19:12:12.714303Z",
-     "start_time": "2025-03-05T19:12:12.709271Z"
+     "end_time": "2025-03-05T19:17:04.666018Z",
+     "start_time": "2025-03-05T19:17:04.662146Z"
     }
    },
    "outputs": [],
@@ -105,8 +105,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-05T19:12:12.718963Z",
-     "start_time": "2025-03-05T19:12:12.712869Z"
+     "end_time": "2025-03-05T19:17:04.672879Z",
+     "start_time": "2025-03-05T19:17:04.665545Z"
     }
    },
    "outputs": [],
@@ -143,8 +143,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-05T19:12:12.728407Z",
-     "start_time": "2025-03-05T19:12:12.721805Z"
+     "end_time": "2025-03-05T19:17:04.677056Z",
+     "start_time": "2025-03-05T19:17:04.674051Z"
     }
    },
    "outputs": [
@@ -199,8 +199,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-05T19:12:13.046527Z",
-     "start_time": "2025-03-05T19:12:12.733511Z"
+     "end_time": "2025-03-05T19:17:04.921811Z",
+     "start_time": "2025-03-05T19:17:04.681094Z"
     }
    },
    "outputs": [
@@ -303,8 +303,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-05T19:12:13.049419Z",
-     "start_time": "2025-03-05T19:12:13.045381Z"
+     "end_time": "2025-03-05T19:17:04.925060Z",
+     "start_time": "2025-03-05T19:17:04.919366Z"
     }
    },
    "outputs": [],
@@ -341,8 +341,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-05T19:12:13.054641Z",
-     "start_time": "2025-03-05T19:12:13.051957Z"
+     "end_time": "2025-03-05T19:17:04.928692Z",
+     "start_time": "2025-03-05T19:17:04.926752Z"
     }
    },
    "outputs": [
@@ -403,8 +403,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-05T19:12:13.239499Z",
-     "start_time": "2025-03-05T19:12:13.106232Z"
+     "end_time": "2025-03-05T19:17:05.115524Z",
+     "start_time": "2025-03-05T19:17:04.980198Z"
     }
    },
    "outputs": [
