--- a/benchmark.ipynb
+++ b/benchmark.ipynb
@@ -13,9 +13,9 @@
     "\n",
     "These benchmarks aim to provide a neutral suite for measuring the efficiency of zkVMs. \n",
     "\n",
-    "You can run this Python notebook yourself to create new plots or analyze the data\n",
+    "You can run this Python notebook yourself to create new plots or analyze the data.\n",
     "\n",
-    "Raw results can be found in [here](https://github.com/yetanotherco/zkvm_benchmarks/tree/main/bench_results)\n"
+    "Raw results can be found [here](https://github.com/yetanotherco/zkvm_benchmarks/tree/main/bench_results).\n"
    ]
   },
   {
