--- a/benchmark.ipynb
+++ b/benchmark.ipynb
@@ -4,10 +4,7 @@
    "cell_type": "markdown",
    "id": "60b72f215642a8ad",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "# Aligned/Lambdaclass zkVMs benchmarks\n",
@@ -30,10 +27,7 @@
      "end_time": "2025-03-05T19:17:04.659935Z",
      "start_time": "2025-03-05T19:17:04.131436Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -51,10 +45,7 @@
      "end_time": "2025-03-05T19:17:04.666018Z",
      "start_time": "2025-03-05T19:17:04.662146Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -82,10 +73,7 @@
    "cell_type": "markdown",
    "id": "91087f52a808a064",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "## Fibonacci Benchmarks\n",
@@ -104,10 +92,7 @@
    "cell_type": "markdown",
    "id": "ab88fbaa9c2d3c18",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "### Load the data"
@@ -145,10 +130,7 @@
    "cell_type": "markdown",
    "id": "373bdbdf02b5a2f7",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "### Print the data sorted by Prover and N\n",
@@ -208,10 +190,7 @@
    "cell_type": "markdown",
    "id": "1f16c0b792bb5f41",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "### Data analytics"
@@ -302,10 +281,7 @@
    "cell_type": "markdown",
    "id": "ff595b92eac77896",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "## Keccack Benchmarks\n",
@@ -325,10 +301,7 @@
    "id": "2445084ca05e1b2c",
    "metadata": {
     "collapsed": false,
-    "jp-MarkdownHeadingCollapsed": true,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
     "### Load the data"
@@ -343,10 +316,7 @@
      "end_time": "2025-03-05T19:17:04.925060Z",
      "start_time": "2025-03-05T19:17:04.919366Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -367,10 +337,7 @@
    "cell_type": "markdown",
    "id": "9c89656ca0ebc2a2",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "### Print the data sorted by Prover and N\n",
@@ -436,10 +403,7 @@
    "cell_type": "markdown",
    "id": "50373717f9cde024",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "### Data analytics"
@@ -639,14 +603,6 @@
     "# Optionally, you can use the following line to display it as a table in Jupyter Notebook\n",
     "display(kps_df)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5eefbc40-696e-4447-b8c9-92605f447ed8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
