Re execute to reset counts

--- a/benchmark.ipynb
+++ b/benchmark.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 1,
    "id": "8fcd2b97299a562",
    "metadata": {
     "ExecuteTime": {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 2,
    "id": "c3c0afb6f55e2ecc",
    "metadata": {
     "ExecuteTime": {
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 3,
    "id": "c5b77fa961672aa1",
    "metadata": {
     "ExecuteTime": {
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 4,
    "id": "f6b97d5055f4f86f",
    "metadata": {
     "ExecuteTime": {
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 5,
    "id": "3128d32d46f96b81",
    "metadata": {
     "ExecuteTime": {
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 6,
    "id": "d1482f59-72ca-47a8-ad66-f40ae1c00af3",
    "metadata": {
     "scrolled": true
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 7,
    "id": "d233c7e6bd0ba5d2",
    "metadata": {
     "ExecuteTime": {
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 8,
    "id": "7e5b67a50333a913",
    "metadata": {
     "ExecuteTime": {
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 9,
    "id": "41539b75707c96d8",
    "metadata": {
     "ExecuteTime": {
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 10,
    "id": "cecefb35-d354-45f6-ad51-28d166ad1abd",
    "metadata": {
     "ExecuteTime": {
@@ -660,7 +660,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Keccak Performance (using highest N value for each prover)\n",
+      "KiB hased per second at max sample\n",
       "\n"
      ]
     },
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 11,
    "id": "a2882342-08e5-4a26-8ff7-54dfd91049df",
    "metadata": {},
    "outputs": [
