--- a/benchmark.ipynb
+++ b/benchmark.ipynb
@@ -187,7 +187,7 @@
     "\n",
     "The data was collected on a server with the following specs:\n",
     "\n",
-    "- GPU: NVIDIA RTX A6000\n",
+    "- GPU: NVIDIA RTX A6000 (48GB)\n",
     "- RAM: 44GB\n",
     "- OS: Ubuntu 22 LTS"
    ],
