--- a/benchmark.ipynb
+++ b/benchmark.ipynb
@@ -15,7 +15,9 @@
     "\n",
     "You can run this Python notebook yourself to create new plots or analyze the data.\n",
     "\n",
-    "Raw results can be found [here](https://github.com/yetanotherco/zkvm_benchmarks/tree/main/bench_results).\n"
+    "Raw results can be found [here](https://github.com/yetanotherco/zkvm_benchmarks/tree/main/bench_results).\n",
+    "\n",
+    "The full Jupyter notebook can be found [here](https://github.com/yetanotherco/zkvm_benchmarks/blob/reth_bench_test/benchmark.ipynb).\n"
    ]
   },
   {
@@ -25,8 +27,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-06T21:55:06.326833Z",
-     "start_time": "2025-03-06T21:55:05.383417Z"
+     "end_time": "2025-03-07T16:32:02.206950Z",
+     "start_time": "2025-03-07T16:32:01.404779Z"
     }
    },
    "outputs": [],
@@ -45,8 +47,8 @@
      "source_hidden": true
     },
     "ExecuteTime": {
-     "end_time": "2025-03-06T21:55:06.340274Z",
-     "start_time": "2025-03-06T21:55:06.335612Z"
+     "end_time": "2025-03-07T16:32:02.220129Z",
+     "start_time": "2025-03-07T16:32:02.214849Z"
     }
    },
    "outputs": [],
@@ -207,9 +209,7 @@
    "source": [
     "### Fibonacci Benchmark\n",
     "\n",
-    "In this section we will analyze the performance of Fibonacci for different provers.\n",
-    "\n",
-    "The data was loaded from `bench_results/fibo_6_mar_25_A6000.csv`."
+    "In this section we will analyze the performance of Fibonacci for different provers."
    ]
   },
   {
@@ -219,7 +219,9 @@
     "collapsed": false
    },
    "source": [
-    "#### Load the data"
+    "#### Load the data\n",
+    "\n",
+    "The data was loaded from `bench_results/fibo_6_mar_25_A6000.csv`."
    ]
   },
   {
@@ -229,8 +231,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-06T21:55:06.349467Z",
-     "start_time": "2025-03-06T21:55:06.338964Z"
+     "end_time": "2025-03-07T16:32:02.227043Z",
+     "start_time": "2025-03-07T16:32:02.217202Z"
     }
    },
    "outputs": [],
@@ -258,8 +260,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-06T21:55:06.370140Z",
-     "start_time": "2025-03-06T21:55:06.356735Z"
+     "end_time": "2025-03-07T16:32:02.240649Z",
+     "start_time": "2025-03-07T16:32:02.231397Z"
     }
    },
    "outputs": [
@@ -316,8 +318,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-06T21:55:06.709665Z",
-     "start_time": "2025-03-06T21:55:06.368208Z"
+     "end_time": "2025-03-07T16:32:02.498475Z",
+     "start_time": "2025-03-07T16:32:02.236435Z"
     }
    },
    "outputs": [
@@ -351,8 +353,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-06T21:55:06.715001Z",
-     "start_time": "2025-03-06T21:55:06.708154Z"
+     "end_time": "2025-03-07T16:32:02.500744Z",
+     "start_time": "2025-03-07T16:32:02.496708Z"
     }
    },
    "outputs": [
@@ -378,9 +380,7 @@
    "source": [
     "### Keccak Benchmark\n",
     "\n",
-    "In this section we will analyze the performance of Keccak for different provers.\n",
-    "\n",
-    "The data was loaded from `bench_results/keccak_6_mar_25_A6000.csv`."
+    "In this section we will analyze the performance of Keccak for different provers."
    ]
   },
   {
@@ -390,7 +390,9 @@
     "collapsed": false
    },
    "source": [
-    "#### Load the data"
+    "#### Load the data\n",
+    "\n",
+    "The data was loaded from `bench_results/keccak_6_mar_25_A6000.csv`."
    ]
   },
   {
@@ -400,8 +402,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-06T21:55:06.757707Z",
-     "start_time": "2025-03-06T21:55:06.716382Z"
+     "end_time": "2025-03-07T16:32:02.505220Z",
+     "start_time": "2025-03-07T16:32:02.500794Z"
     }
    },
    "outputs": [],
@@ -429,8 +431,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-06T21:55:06.763435Z",
-     "start_time": "2025-03-06T21:55:06.724169Z"
+     "end_time": "2025-03-07T16:32:02.509847Z",
+     "start_time": "2025-03-07T16:32:02.504781Z"
     }
    },
    "outputs": [
@@ -495,8 +497,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-06T21:55:06.959241Z",
-     "start_time": "2025-03-06T21:55:06.782907Z"
+     "end_time": "2025-03-07T16:32:02.734831Z",
+     "start_time": "2025-03-07T16:32:02.522044Z"
     }
    },
    "outputs": [
@@ -530,8 +532,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-06T21:55:06.974819Z",
-     "start_time": "2025-03-06T21:55:06.967547Z"
+     "end_time": "2025-03-07T16:32:02.745910Z",
+     "start_time": "2025-03-07T16:32:02.737265Z"
     }
    },
    "outputs": [
@@ -563,7 +565,7 @@
     "collapsed": false
    },
    "source": [
-    "#### Time used at 10M and 100M bytes"
+    "##### Time used at 10M and 100M bytes"
    ]
   },
   {
@@ -573,8 +575,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-06T21:55:07.018910Z",
-     "start_time": "2025-03-06T21:55:06.981319Z"
+     "end_time": "2025-03-07T16:32:02.757679Z",
+     "start_time": "2025-03-07T16:32:02.744778Z"
     }
    },
    "outputs": [
@@ -628,9 +630,7 @@
    "source": [
     "### Fibonacci Benchmark\n",
     "\n",
-    "In this section we will analyze the performance of Fibonacci for different provers.\n",
-    "\n",
-    "The data was loaded from `bench_results/fibo_5_mar_25_epyc8534p_64c_576gb.csv`."
+    "In this section we will analyze the performance of Fibonacci for different provers."
    ]
   },
   {
@@ -640,7 +640,9 @@
     "collapsed": false
    },
    "source": [
-    "#### Load the data"
+    "#### Load the data\n",
+    "\n",
+    "The data was loaded from `bench_results/fibo_5_mar_25_epyc8534p_64c_576gb.csv`."
    ]
   },
   {
@@ -650,8 +652,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-06T21:55:07.019768Z",
-     "start_time": "2025-03-06T21:55:06.989053Z"
+     "end_time": "2025-03-07T16:32:02.836855Z",
+     "start_time": "2025-03-07T16:32:02.753498Z"
     }
    },
    "outputs": [],
@@ -679,8 +681,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-06T21:55:07.041564Z",
-     "start_time": "2025-03-06T21:55:06.997681Z"
+     "end_time": "2025-03-07T16:32:02.846926Z",
+     "start_time": "2025-03-07T16:32:02.763048Z"
     }
    },
    "outputs": [
@@ -741,8 +743,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-06T21:55:07.251658Z",
-     "start_time": "2025-03-06T21:55:07.097787Z"
+     "end_time": "2025-03-07T16:32:03.048430Z",
+     "start_time": "2025-03-07T16:32:02.878475Z"
     }
    },
    "outputs": [
@@ -776,8 +778,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-06T21:55:07.257765Z",
-     "start_time": "2025-03-06T21:55:07.252336Z"
+     "end_time": "2025-03-07T16:32:03.054195Z",
+     "start_time": "2025-03-07T16:32:03.050967Z"
     }
    },
    "outputs": [
@@ -803,9 +805,7 @@
    "source": [
     "### Keccak Benchmark\n",
     "\n",
-    "In this section we will analyze the performance of Keccak for different provers.\n",
-    "\n",
-    "The data was loaded from `bench_results/keccak_5_mar_25_epyc8534p_64c_576gb.csv`."
+    "In this section we will analyze the performance of Keccak for different provers."
    ]
   },
   {
@@ -815,7 +815,9 @@
     "collapsed": false
    },
    "source": [
-    "#### Load the data"
+    "#### Load the data\n",
+    "\n",
+    "The data was loaded from `bench_results/keccak_5_mar_25_epyc8534p_64c_576gb.csv`."
    ]
   },
   {
@@ -825,8 +827,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-06T21:55:07.262197Z",
-     "start_time": "2025-03-06T21:55:07.255283Z"
+     "end_time": "2025-03-07T16:32:03.058949Z",
+     "start_time": "2025-03-07T16:32:03.053542Z"
     }
    },
    "outputs": [],
@@ -854,8 +856,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-06T21:55:07.267398Z",
-     "start_time": "2025-03-06T21:55:07.263103Z"
+     "end_time": "2025-03-07T16:32:03.061841Z",
+     "start_time": "2025-03-07T16:32:03.059962Z"
     }
    },
    "outputs": [
@@ -922,8 +924,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-06T21:55:07.544118Z",
-     "start_time": "2025-03-06T21:55:07.376673Z"
+     "end_time": "2025-03-07T16:32:03.348842Z",
+     "start_time": "2025-03-07T16:32:03.087797Z"
     }
    },
    "outputs": [
@@ -957,8 +959,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-06T21:55:07.550505Z",
-     "start_time": "2025-03-06T21:55:07.546246Z"
+     "end_time": "2025-03-07T16:32:03.354839Z",
+     "start_time": "2025-03-07T16:32:03.349453Z"
     }
    },
    "outputs": [
@@ -990,7 +992,7 @@
     "collapsed": false
    },
    "source": [
-    "#### Time used at 100K bytes and 10M bytes"
+    "##### Time used at 100K bytes and 10M bytes"
    ]
   },
   {
@@ -1000,8 +1002,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-06T21:55:07.559119Z",
-     "start_time": "2025-03-06T21:55:07.553265Z"
+     "end_time": "2025-03-07T16:32:03.368075Z",
+     "start_time": "2025-03-07T16:32:03.357915Z"
     }
    },
    "outputs": [
