jupyter notebook improvements update README.md

--- a/benchmark.ipynb
+++ b/benchmark.ipynb
@@ -7,13 +7,27 @@
     "collapsed": false
    },
    "source": [
-    "# Aligned/Lambdaclass zkVMs benchmarks\n",
+    "# Benchmarks of VM proving times made by Aligned\n",
     "\n",
-    "## Benchmarks of VM proving times made by Aligned and Lambdaclass\n",
+    "## About\n",
     "\n",
     "These benchmarks aim to provide a neutral suite for measuring the efficiency of zkVMs. \n",
     "\n",
+    "The benchmarks test the following programs:\n",
+    "\n",
+    "- Fibonacci\n",
+    "- Keccak\n",
+    "- [RSP (Reth Succinct Processor)](https://github.com/succinctlabs/rsp)\n",
+    "\n",
+    "The benchmarks are run on the following zkVMs:\n",
+    "\n",
+    "- [SP1](https://docs.succinct.xyz/docs/sp1/introduction)\n",
+    "- [Risc0](https://risczero.com/)\n",
+    "- [Pico](https://docs.brevis.network/)\n",
+    "\n",
     "You can run this Python notebook yourself to create new plots or analyze the data.\n",
+    "\n",
+    "The Githbut repository is available [here](https://github.com/yetanotherco/zkvm_benchmarks).\n",
     "\n",
     "Raw results can be found [here](https://github.com/yetanotherco/zkvm_benchmarks/tree/main/bench_results).\n",
     "\n",
@@ -27,8 +41,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-07T16:32:02.206950Z",
-     "start_time": "2025-03-07T16:32:01.404779Z"
+     "end_time": "2025-03-07T21:38:05.589703Z",
+     "start_time": "2025-03-07T21:38:04.989027Z"
     }
    },
    "outputs": [],
@@ -47,8 +61,8 @@
      "source_hidden": true
     },
     "ExecuteTime": {
-     "end_time": "2025-03-07T16:32:02.220129Z",
-     "start_time": "2025-03-07T16:32:02.214849Z"
+     "end_time": "2025-03-07T21:38:05.600491Z",
+     "start_time": "2025-03-07T21:38:05.598171Z"
     }
    },
    "outputs": [],
@@ -231,8 +245,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-07T16:32:02.227043Z",
-     "start_time": "2025-03-07T16:32:02.217202Z"
+     "end_time": "2025-03-07T21:38:05.607615Z",
+     "start_time": "2025-03-07T21:38:05.600682Z"
     }
    },
    "outputs": [],
@@ -260,8 +274,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-07T16:32:02.240649Z",
-     "start_time": "2025-03-07T16:32:02.231397Z"
+     "end_time": "2025-03-07T21:38:05.624592Z",
+     "start_time": "2025-03-07T21:38:05.611817Z"
     }
    },
    "outputs": [
@@ -318,8 +332,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-07T16:32:02.498475Z",
-     "start_time": "2025-03-07T16:32:02.236435Z"
+     "end_time": "2025-03-07T21:38:05.871233Z",
+     "start_time": "2025-03-07T21:38:05.615957Z"
     }
    },
    "outputs": [
@@ -353,8 +367,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-07T16:32:02.500744Z",
-     "start_time": "2025-03-07T16:32:02.496708Z"
+     "end_time": "2025-03-07T21:38:05.877464Z",
+     "start_time": "2025-03-07T21:38:05.873393Z"
     }
    },
    "outputs": [
@@ -402,8 +416,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-07T16:32:02.505220Z",
-     "start_time": "2025-03-07T16:32:02.500794Z"
+     "end_time": "2025-03-07T21:38:05.881032Z",
+     "start_time": "2025-03-07T21:38:05.877352Z"
     }
    },
    "outputs": [],
@@ -431,8 +445,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-07T16:32:02.509847Z",
-     "start_time": "2025-03-07T16:32:02.504781Z"
+     "end_time": "2025-03-07T21:38:05.884711Z",
+     "start_time": "2025-03-07T21:38:05.882557Z"
     }
    },
    "outputs": [
@@ -497,8 +511,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-07T16:32:02.734831Z",
-     "start_time": "2025-03-07T16:32:02.522044Z"
+     "end_time": "2025-03-07T21:38:06.098716Z",
+     "start_time": "2025-03-07T21:38:05.935560Z"
     }
    },
    "outputs": [
@@ -532,8 +546,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-07T16:32:02.745910Z",
-     "start_time": "2025-03-07T16:32:02.737265Z"
+     "end_time": "2025-03-07T21:38:06.107824Z",
+     "start_time": "2025-03-07T21:38:06.103476Z"
     }
    },
    "outputs": [
@@ -575,8 +589,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-07T16:32:02.757679Z",
-     "start_time": "2025-03-07T16:32:02.744778Z"
+     "end_time": "2025-03-07T21:38:06.114438Z",
+     "start_time": "2025-03-07T21:38:06.106114Z"
     }
    },
    "outputs": [
@@ -652,8 +666,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-07T16:32:02.836855Z",
-     "start_time": "2025-03-07T16:32:02.753498Z"
+     "end_time": "2025-03-07T21:38:06.119573Z",
+     "start_time": "2025-03-07T21:38:06.113810Z"
     }
    },
    "outputs": [],
@@ -681,8 +695,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-07T16:32:02.846926Z",
-     "start_time": "2025-03-07T16:32:02.763048Z"
+     "end_time": "2025-03-07T21:38:06.160423Z",
+     "start_time": "2025-03-07T21:38:06.119161Z"
     }
    },
    "outputs": [
@@ -743,8 +757,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-07T16:32:03.048430Z",
-     "start_time": "2025-03-07T16:32:02.878475Z"
+     "end_time": "2025-03-07T21:38:06.468474Z",
+     "start_time": "2025-03-07T21:38:06.124051Z"
     }
    },
    "outputs": [
@@ -778,8 +792,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-07T16:32:03.054195Z",
-     "start_time": "2025-03-07T16:32:03.050967Z"
+     "end_time": "2025-03-07T21:38:06.475509Z",
+     "start_time": "2025-03-07T21:38:06.468494Z"
     }
    },
    "outputs": [
@@ -827,8 +841,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-07T16:32:03.058949Z",
-     "start_time": "2025-03-07T16:32:03.053542Z"
+     "end_time": "2025-03-07T21:38:06.480218Z",
+     "start_time": "2025-03-07T21:38:06.476074Z"
     }
    },
    "outputs": [],
@@ -856,8 +870,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-07T16:32:03.061841Z",
-     "start_time": "2025-03-07T16:32:03.059962Z"
+     "end_time": "2025-03-07T21:38:06.485581Z",
+     "start_time": "2025-03-07T21:38:06.481371Z"
     }
    },
    "outputs": [
@@ -924,8 +938,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-07T16:32:03.348842Z",
-     "start_time": "2025-03-07T16:32:03.087797Z"
+     "end_time": "2025-03-07T21:38:06.682169Z",
+     "start_time": "2025-03-07T21:38:06.501505Z"
     }
    },
    "outputs": [
@@ -959,8 +973,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-07T16:32:03.354839Z",
-     "start_time": "2025-03-07T16:32:03.349453Z"
+     "end_time": "2025-03-07T21:38:06.687940Z",
+     "start_time": "2025-03-07T21:38:06.685555Z"
     }
    },
    "outputs": [
@@ -1002,8 +1016,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-07T16:32:03.368075Z",
-     "start_time": "2025-03-07T16:32:03.357915Z"
+     "end_time": "2025-03-07T21:38:06.695914Z",
+     "start_time": "2025-03-07T21:38:06.690661Z"
     }
    },
    "outputs": [
