add examples status

--- a/benchmark.ipynb
+++ b/benchmark.ipynb
@@ -15,9 +15,9 @@
     "\n",
     "The benchmarks test the following programs:\n",
     "\n",
-    "- Fibonacci\n",
-    "- Keccak\n",
-    "- [RSP (Reth Succinct Processor)](https://github.com/succinctlabs/rsp)\n",
+    "- ✅ Fibonacci\n",
+    "- ✅ Keccak\n",
+    "- 🏗️ [RSP (Reth Succinct Processor)](https://github.com/succinctlabs/rsp)\n",
     "\n",
     "The benchmarks are run on the following zkVMs:\n",
     "\n",
